2008-10-10  Tambet Ingo  <tambet@gmail.com>

	* nm-connection-editor.desktop: Add.

2008-10-09  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_set_stringhash_helper): ensure that stale info isn't left
			around by removing keys that aren't in the stringhash that's about
			to be written to GConf

2008-10-09  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- 'network' -> 'setting'; 'network' was left over from 0.6 when SSIDs
			were part of the GConf path

2008-10-08  Alexander Sack  <asac@ubuntu.com>

	* src/connection-editor/page-ip4.c
		- (ui_to_setting) don't stop processing ui_to_settings when
			when g_strsplit_set result list contains an empty string.

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
		- (*_get_icon): use the active connection for more information in the
			tooltip

	* src/applet.c
	  src/applet.h
		- (applet_get_device_icon_for_state): pass active connection through
			to the get_icon device class handler

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet.c
		- Use "Mobile Broadband" everywhere instead of GSM or CDMA (bgo #551361)

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-mobile.c
	  src/connection-editor/ce-page-mobile.glade
		- Hide Network Type and Band items because they won't be supported until
			ModemManager support lands

2008-10-04  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (internal_init): use 'authentication' instead of secrets (bgo #548130);
			use 'hidden' instead of 'other' (bgo #544381)

	* src/applet-device-wifi.c
	  src/applet-device-wifi.h
	  src/applet.c
		- (nma_menu_show_cb, nma_menu_add_hidden_network_item): use 'hidden'
			instead of 'other' (bgo #544381)

2008-10-04  Dan Williams  <dcbw@redhat.com>
