@@ -1,3 +1,10 @@
+2008-10-15  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-wifi.c
+		- (get_security_for_ap): fix the following case for cards that can't
+			do WPA or RSN but can pass through the information elements, and
+			where the AP has privacy turned on in the beacon
+
 2008-10-10  Tambet Ingo  <tambet@gmail.com>
 
 	* nm-connection-editor.desktop: Add.
